--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,3 +14,26 @@ jobs:
       - run:
           name: docker-compose down
           command: docker-compose down
+# EC2にSSH接続し、デプロイを実行
+  deploy:
+    machine:
+      image: circleci/classic:edge
+    steps:
+      - checkout
+      # CircleCIに登録した秘密鍵を呼び出す。
+      - add_ssh_keys:
+      - run: ssh ${ec2-user}@${ec2-18-182-28-25.ap-northeast-1.compute.amazonaws.com} 'git pull && cd flaskapp && sudo /usr/local/bin/docker-compose up'
+
+# テストが成功した場合のみ、deployを実行するようにします。
+workflows:
+  version: 2
+  build_and_deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          # masterブランチがpushされた場合のみdeployするようにする。
+          filters:
+            branches:
+              only: master
