--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,8 @@ jobs:
       - checkout
       # CircleCIに登録した秘密鍵を呼び出す。
       - add_ssh_keys:
+          fingerprints:
+            - "a1:cb:22:d4:5f:bc:88:90:21:b7:34:15:2f:6f:05:f0"
       - run: ssh ${ec2-user}@${ec2-18-182-28-25.ap-northeast-1.compute.amazonaws.com} 'git pull && cd flaskapp && sudo /usr/local/bin/docker-compose up'
 
 # テストが成功した場合のみ、deployを実行するようにします。
